--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
         <script src="https://cdn.lordicon.com/lordicon.js"></script>
+        <script src="https://cdn.lordicon.com/lordicon.js"></script>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
